Implements endpoints from admin controller
